[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {package = "gtk4", features=["v4_4"]}
gst = {package = "gstreamer", version = "*"}
gst_video = {package = "gstreamer-video", version="*"}
gst-plugin-gtk4 = "0.10.7"
